--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,15 @@
 .env
+
+# view ignore
+admin/logs
+admin/_.log
+admin/npm-debug.log_
+admin/yarn-debug.log*
+admin/yarn-error.log*
+admin/pnpm-debug.log*
+admin/lerna-debug.log*
+
+admin/node_modules
+admin/dist
+admin/dist-ssr
+admin/\*.local
